Can not select any bone in Weight Paint mode with Face selection masking #38837

Closed
opened 2014-02-25 20:31:22 +01:00 by Jun T · 8 comments

System Information
Arch Linux (x86-64)
nVidia Geforce GTX 670

Blender Version
Broken: 2.69-d47d030
Worked: 2.69.0 r60991

Short description of error
In 2.69.0, It is possible that to select a bone by ctl+right click, But in recent versions I can't select any bone.

Exact steps for others to reproduce the error
Open boneselection.blend. file. ctl + right click the bone.

**System Information** Arch Linux (x86-64) nVidia Geforce GTX 670 **Blender Version** Broken: 2.69-d47d030 Worked: 2.69.0 r60991 **Short description of error** In 2.69.0, It is possible that to select a bone by ctl+right click, But in recent versions I can't select any bone. **Exact steps for others to reproduce the error** Open [boneselection.blend](https://archive.blender.org/developer/F78967/boneselection.blend). file. ctl + right click the bone.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @junt

Added subscriber: @junt

Changed status from 'Open' to: 'Duplicate'

Changed status from 'Open' to: 'Duplicate'

✘ Merged into #38814.

✘ Merged into #38814.

Added subscriber: @brecht

Added subscriber: @brecht

Thanks for reporting, this has the same cause as another bug, so will close this one.

Thanks for reporting, this has the same cause as another bug, so will close this one.

This issue was referenced by blender/blender-addons-contrib@4a61df9c95

This issue was referenced by blender/blender-addons-contrib@4a61df9c95d48c0854d49869eac2d3dc0453b7f4

This issue was referenced by 4a61df9c95

This issue was referenced by 4a61df9c95d48c0854d49869eac2d3dc0453b7f4
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38837
No description provided.