Fix T38837: Ctrl+RMB can't select posemode

This used to work (unintentionally), now check for paint-select
modes as well as editmode for ctrl+rmb to force object selection.